基本レイアウトパーツ前半部分のレビューをお願い致します。

--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,43 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
+.clearfix::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.q1_content{
+	width: 900px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #eff3f4;
+}
+
+.q1_content_box{
+	width: 230px;
+	padding: 20px;
+	margin-left: 20px;
+	background-color: #3274ae;
+	float:left;
+
+}
+
+.q1_content .q1_content_box:first-child {
+  margin-left: 0;
+} 
+
+.q1_content_text{
+	font-size: 16px;
+	padding: 20px;
+	line-height: 16px;
+	border:10px solid #022336;
+	background-color: #eaf4ff;
+}
 /* 回答はここに書いてね */
