--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,39 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+/**{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}*/
+
+.clearfix::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.q2_content {
+	width: 900px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #eff3f4;
+}
+
+.is_left{
+	float: left;
+	margin-right: 20px;
+}
+
+.is_right{
+	float: right;
+	margin-left: 20px;
+}
+
+.q2_content_text{
+	font-size: 18px;
+	line-height: 22px;
+}
+
 
 /* 回答はここに書いてね */
