--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,100 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q5{
+	width: 500px;
+	height:  500px;
+	background-color: #ECF1F2;
+	margin: 0 auto;
+	position: relative;
+}
+
+.q5_contents_1{
+	background-color: #ffefd3;
+	margin-left: 200px;
+	margin-top: 40px;
+	left: 0px;
+	top: 0px;
+	z-index: 1;
+}
+
+.q5_contents_2{
+	background-color: #7084de;
+	right: 120px;
+	top: 120px;
+	z-index: 2;
+}
+.q5_contents_3{
+	background-color: #d0ecea;
+	z-index: 3;
+	right: 40px;
+	top: 200px;
+}
+.q5_contents_4{
+	background-color: #8b7a5e;
+	z-index: 4;
+	right: 120px;
+	top: 280px;
+}
+.q5_contents_5{
+	background-color: #9fd6d2;
+	z-index: 5;
+	right: 200px;
+	top: 360px;
+}
+.q5_contents_6{
+	background-color: #fffee4;
+	z-index: 6;
+	left: 120px;
+	top: 280px;
+}
+.q5_contents_7{
+	background-color: #deae70;
+	z-index: 7;
+	left: 40px;
+	top: 200px;
+}
+.q5_contents_8{
+	background-color: #de70cf;
+	z-index: 8;
+	left: 120px;
+	top: 120px;
+}
+
+.q5_contents_8::before{
+	position: absolute;
+	content: "";
+	height: 20px;
+	width: 20px;
+	background-color: #ffefd3;
+	right: 0;
+	top: 0;
+	z-index: 9;
+}
+
+.q5_contents_9{
+	position: fixed;
+	background-color: #2b69a3;
+	top: 10px;
+	left: 10px;
+	z-index: 10;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 100px;
+	text-align: center;
+	width: 100px;
+	height: 100px;
+}
+
+.is-common{
+	position: absolute;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 100px;
+	text-align: center;
+	width: 100px;
+	height: 100px;
+}
+
 
 /* 回答はここに書いてね */
