--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,11 +1,7 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-/**{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}*/
+
 
 .clearfix::after{
 	content: "";
@@ -20,19 +16,25 @@
 	background-color: #eff3f4;
 }
 
-.is_left{
+.is_left {
 	float: left;
 	margin-right: 20px;
 }
 
-.is_right{
+.is_right {
 	float: right;
 	margin-left: 20px;
 }
 
-.q2_content_text{
+.q2_content_text {
 	font-size: 18px;
 	line-height: 22px;
+	word-break: break-all;
+}
+
+.img_form {
+	width: 200px;
+	height: 133px;
 }
 
 
