--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,69 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+/*transition*/
+.q8_box {
+	width: 500px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.q8_box_textbox {
+	bottom: -100%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+    transition-duration: 0.5s;
+}
+
+.q8_box:hover .q8_box_textbox {
+	bottom: 0;
+}
+
+.q8_box_text {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    color: #FFF;
+    position: absolute;
+    box-sizing: border-box;
+    word-break: break-all;
+}
+
+.box_image {
+	transition-duration: 0.5s;
+}
+
+/*全角のスペースがあったのでhoverが反映されていなかった。*/
+.q8_box:hover .box_image {
+	transform: scale(1.5);
+}
+
+
+/*animation*/
+.q8_animation {
+	width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border: 10px solid #ECF1F2;
+    border-top-color: #00BCD4;
+    border-radius: 50%;
+    animation: loading 1.1s infinite linear;
+}
+
+@keyframes loading {
+	0% {
+    	transform: rotate(0);
+	}
+
+	100% {
+    	transform: rotate(360deg);
+	}
+}
 
 /* 回答はここに書いてね */
